# file-validator

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml
configs/: .env
documentation/: DOCUMENTATION-GUIDE.md  IMPLEMENTATION-PROGRESS.md  INDEX.md  MODERN-TYPE-HINTS.md  ORGANIZATION-CONFIRMATION.md  PHASE1-COMPLETE.md  PHASE1-COMPLETION-CERTIFICATE.md  PHASE1-FINAL-SUMMARY.md  PHASE1-IMPLEMENTATION-CHECKLIST.md  PHASE1-MODERN-TYPES.md  README.md
file-validator-core/: README.md  pyproject.toml
file-validator-core/src/file_validator/: __init__.py  auditor.py  config.py  constants.py  converters.py  credentials.py  excel_exporter.py  exceptions.py  report_generator.py  utils.py
file-validator-core/src/file_validator/file_handlers/: __init__.py  compression.py  gcs_handler.py  interface.py  local_handler.py
file-validator-core/src/file_validator/templates/: html_report.html
file-validator-core/tests/: __init__.py  test_file_validator.py
file-validator-webserver/: README.md  pyproject.toml
file-validator-webserver/src/file_validator_webserver/: fs_utils.py  main.py
file-validator-webserver/src/file_validator_webserver/static/: style.css
file-validator-webserver/src/file_validator_webserver/templates/: index.html
report-template-builder/templates/: README.md  build_template.py  report_template_compiled.html  report_template_modular.html
report-template-builder/templates/css/: base.css  char-diff.css  comparison.css  components.css  controls.css  dark-mode.css  search-filter.css  workspace.css
report-template-builder/templates/js/: char-diff.js  navigation.js  pagination.js  search-filter.js  sync-scroll.js  theme.js  timezone.js  utilities.js  view-switcher.js
report-template-builder/templates/partials/: data_comparison.html  file_naming.html  header_comparison.html  insights_panel.html  job_section.html  legend.html  rejected_rows.html  search_filter.html  summary.html  trailer_comparison.html  ui_controls.html  view_controls.html
scripts/: run_tests.ps1  run_tests.sh  start_server.ps1  start_server.sh
src/file_validator/: __init__.py  config.py  exceptions.py  logging_config.py  utils.py
src/file_validator/api/: __init__.py
src/file_validator/api/routers/: __init__.py
src/file_validator/core/: __init__.py
src/file_validator/database/: __init__.py  config.py  models.py  repository.py
src/file_validator/schemas/: __init__.py
src/file_validator/services/: __init__.py
src/file_validator/tasks/: __init__.py
tests/: __init__.py  conftest.py
tools/: start_server.bat  start_server.sh  start_ui.ps1  start_ui.sh  uv_sync_check.sh  uv_sync_fix.ps1  uv_sync_fix.sh
